--- a/roger-skyline1/deployment-files/web/index.html
+++ b/roger-skyline1/deployment-files/web/index.html
@@ -12,7 +12,6 @@
         <link href="assets/css/style.css" rel="stylesheet">
     </head>
 
-
     <body>
         <div class="container">
             <header>
@@ -21,8 +20,8 @@
                 </h3>
                 <nav>
                     <ul class="table">
-                        <a class="active" href="#">Acceuil</a>
-                        <a href="#">Login</a>
+                        <a class="active" href="#">Index</a>
+                        <a href="login.html">Login</a>
                     </ul>
                 </nav>
             </header>
