5 files changed, 166 insertions(+), 63 deletions(-)

--- a/roger-skyline1/deployment-files/web/index.html
+++ b/roger-skyline1/deployment-files/web/index.html
@@ -15,9 +15,11 @@
     <body>
         <div class="container">
             <header>
-                <h3 class="logo">
-                    <img src="assets/42.svg">
-                </h3>
+                <a href="#">
+                    <h3 class="logo">
+                        <img src="assets/42.svg">
+                    </h3>
+                </a>
                 <nav>
                     <ul class="table">
                         <a class="active" href="#">Index</a>
