--- a/roger-skyline1/deployment-files/web/login.html
+++ b/roger-skyline1/deployment-files/web/login.html
@@ -15,9 +15,11 @@
 <body>
 <div class="container">
     <header>
-        <h3 class="logo">
-            <img src="assets/42.svg">
-        </h3>
+        <a href="index.html">
+            <h3 class="logo">
+                <img src="assets/42.svg">
+            </h3>
+        </a>
         <nav>
             <ul class="table">
                 <a href="index.html">Index</a>
