2 files changed, 36 insertions(+), 46 deletions(-)

--- a/piscines/php/day00/ex04/menu.html
+++ b/piscines/php/day00/ex04/menu.html
@@ -25,7 +25,7 @@
                         <li><a href="#">Thon</a>
                             <ul class="description blue">
                                 <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
+                                <li><p>Reste: 10</p></li>
                             </ul>
                         </li>
                     </ul>
@@ -35,14 +35,14 @@
                     <ul class="subsubmenu blue">
                         <li><a href="#">Bon gros burger</a>
                             <ul class="description blue">
-                                <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
+                                <li><p>Prix: 15E</p></li>
+                                <li><p>Reste: 2</p></li>
                             </ul>
                         </li>
                         <li><a href="#">Tartiflette</a>
                             <ul class="description blue">
-                                <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
+                                <li><p>Prix: 50E</p></li>
+                                <li><p>Reste: 20</p></li>
                             </ul>
                         </li>
                     </ul>
@@ -53,35 +53,39 @@
             <p>Boissons</p>
             <ul class="submenu green">
                 <li>
-                    <p>Sandwichs</p>
+                    <p>Soft</p>
                     <ul class="subsubmenu green">
-                        <li><a href="#">Poulet</a>
+                        <li><a href="#">Eau plate</a>
                             <ul class="description green">
-                                <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
+                                <li><p>Prix: 10E (C'est la crise)</p></li>
+                                <li><p>Reste: 2</p></li>
+                                <li><p>25Cl</p></li>
                             </ul>
                         </li>
-                        <li><a href="#">Thon</a>
+                        <li><a href="#">Eau pétillante</a>
                             <ul class="description green">
-                                <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
+                                <li><p>Prix: 2E</p></li>
+                                <li><p>Reste: 10</p></li>
+                                <li><p>25Cl</p></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <p>Plats</p>
+                    <p>Soda</p>
                     <ul class="subsubmenu green">
-                        <li><a href="#">Bon gros burger</a>
+                        <li><a href="#">Breizh-Cola</a>
                             <ul class="description green">
-                                <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
+                                <li><p>Prix: 3E</p></li>
+                                <li><p>Reste: 2</p></li>
+                                <li><p>50Cl</p></li>
                             </ul>
                         </li>
-                        <li><a href="#">Tartiflette</a>
+                        <li><a href="#">Soda sans nom</a>
                             <ul class="description green">
-                                <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
+                                <li><p>Prix: 3E</p></li>
+                                <li><p>Reste: 5</p></li>
+                                <li><p>50Cl</p></li>
                             </ul>
                         </li>
                     </ul>
@@ -92,32 +96,15 @@
             <p>Extras</p>
             <ul class="submenu red">
                 <li>
-                    <p>Sandwichs</p>
+                    <p>A pu inspiration</p>
                     <ul class="subsubmenu red">
-                        <li><a href="#">Poulet</a>
+                        <li><a href="#">Café</a>
                             <ul class="description red">
                                 <li><p>Prix: 1E</p></li>
                                 <li><p>Reste: 0</p></li>
                             </ul>
                         </li>
-                        <li><a href="#">Thon</a>
-                            <ul class="description red">
-                                <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <p>Plats</p>
-                    <ul class="subsubmenu red">
-                        <li><a href="#">Bon gros burger</a>
-                            <ul class="description red">
-                                <li><p>Prix: 1E</p></li>
-                                <li><p>Reste: 0</p></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Tartiflette</a>
+                        <li><a href="#">Tea</a>
                             <ul class="description red">
                                 <li><p>Prix: 1E</p></li>
                                 <li><p>Reste: 0</p></li>
