--- a/piscines/php/day04/ex04/modif.html
+++ b/piscines/php/day04/ex04/modif.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>42 chat</title>
 </head>
 <body>
-
+<form action="modif.php" method="post">
+    Identifiant: <input type="text" name="login">
+    <br>
+    Ancien mot de passe: <input type="password" name="oldpw">
+    <br>
+    Nouveau mot de passe: <input type="password" name="newpw">
+    <br>
+    <input type="submit" name="submit" value="OK">
+</form>
 </body>
 </html>
