--- a/piscines/php/day09/ex00/balloon.html
+++ b/piscines/php/day09/ex00/balloon.html
@@ -25,11 +25,11 @@
     function onLeave() {
         var width = parseInt(balloon.clientWidth, 10) - 5;
         var height = parseInt(balloon.clientHeight, 10) - 5;
-        if (balloon.style.backgroundColor == 'blue')
+        if (balloon.style.backgroundColor === 'blue')
             balloon.style.backgroundColor = 'green';
-        else if (balloon.style.backgroundColor == 'green')
+        else if (balloon.style.backgroundColor === 'green')
             balloon.style.backgroundColor = 'red';
-        else if (balloon.style.backgroundColor == '' || balloon.style.backgroundColor == 'red')
+        else if (balloon.style.backgroundColor === '' || balloon.style.backgroundColor === 'red')
             balloon.style.backgroundColor = 'blue';
         if (width >= 200) {
             balloon.style.width = width + 'px';
@@ -39,19 +39,16 @@
     function onClick() {
         var width = parseInt(balloon.clientWidth, 10) + 10;
         var height = parseInt(balloon.clientHeight, 10) + 10;
-        if (balloon.style.backgroundColor == '' || balloon.style.backgroundColor == 'red')
+        if (balloon.style.backgroundColor === '' || balloon.style.backgroundColor === 'red')
             balloon.style.backgroundColor = 'green';
-        else if (balloon.style.backgroundColor == 'green')
+        else if (balloon.style.backgroundColor === 'green')
             balloon.style.backgroundColor = 'blue';
-        else if (balloon.style.backgroundColor == 'blue')
+        else if (balloon.style.backgroundColor === 'blue')
             balloon.style.backgroundColor = 'red';
-        if (width > 420 || height > 420)
-        {
+        if (width > 420 || height > 420) {
             balloon.style.width = 200 + 'px';
             balloon.style.height = 200 + 'px';
-        }
-        else
-        {
+        } else {
             balloon.style.width = width + 'px';
             balloon.style.height = height + 'px';
         }
