--- a/piscines/php/day09/ex02/index.html
+++ b/piscines/php/day09/ex02/index.html
@@ -1,14 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>To do or not to do</title>
-    <style>
-        .ft_list {
-        }
-    </style>
+    <meta charset="UTF-8">
+    <title>Todo list</title>
+    <script src="todo.js"></script>
 </head>
 <body>
-<button type='button' id="new">New</button>
-<div id='ft_list'></div>
-<script src="todo.js"></script>
+<div id="ft_list"></div>
+<button id="new">New</button>
 </body>
 </html>
