4 files changed, 96 insertions(+), 104 deletions(-)

--- a/piscines/php/day09/ex00/balloon.html
+++ b/piscines/php/day09/ex00/balloon.html
@@ -2,7 +2,7 @@
 <head>
     <title>Balloon</title>
     <style>
-        .balloon {
+        #balloon {
             position: absolute;
             top:0;
             left:0;
@@ -17,41 +17,35 @@
     </style>
 </head>
 <body>
-<div class="balloon" id="balloon"></div>
+<div id="balloon" onclick="inflateBalloon()" onmouseout="deflateBalloon()"></div>
 <script>
-    balloon = document.getElementById('balloon');
-    balloon.onclick = onClick;
-    balloon.onmouseleave = onLeave;
-    function onLeave() {
-        var width = parseInt(balloon.clientWidth, 10) - 5;
-        var height = parseInt(balloon.clientHeight, 10) - 5;
-        if (balloon.style.backgroundColor === 'blue')
-            balloon.style.backgroundColor = 'green';
-        else if (balloon.style.backgroundColor === 'green')
-            balloon.style.backgroundColor = 'red';
-        else if (balloon.style.backgroundColor === '' || balloon.style.backgroundColor === 'red')
-            balloon.style.backgroundColor = 'blue';
-        if (width >= 200) {
-            balloon.style.width = width + 'px';
-            balloon.style.height = height + 'px';
-        }
+    window.onload = function () {
+        var balloon = document.getElementById("balloon");
     }
-    function onClick() {
-        var width = parseInt(balloon.clientWidth, 10) + 10;
-        var height = parseInt(balloon.clientHeight, 10) + 10;
-        if (balloon.style.backgroundColor === '' || balloon.style.backgroundColor === 'red')
-            balloon.style.backgroundColor = 'green';
-        else if (balloon.style.backgroundColor === 'green')
-            balloon.style.backgroundColor = 'blue';
-        else if (balloon.style.backgroundColor === 'blue')
-            balloon.style.backgroundColor = 'red';
-        if (width > 420 || height > 420) {
-            balloon.style.width = 200 + 'px';
-            balloon.style.height = 200 + 'px';
-        } else {
-            balloon.style.width = width + 'px';
-            balloon.style.height = height + 'px';
-        }
+
+    var size = 200;
+    var color = "red";
+
+    function inflateBalloon() {
+        size += 10;
+        if (size > 420) size = 200;
+        balloon.style.width = size + 'px';
+        balloon.style.height = size + 'px';
+        if (color == "red") color = "green";
+        else if (color == "green") color = "blue";
+        else if (color == "blue") color = "red";
+        balloon.style.backgroundColor = color;
+    }
+
+    function deflateBalloon() {
+        size -= 5;
+        if (size < 200) size = 200;
+        balloon.style.width = size + 'px';
+        balloon.style.height = size + 'px';
+        if (color == "red") color = "blue";
+        else if (color == "green") color = "red";
+        else if (color == "blue") color = "green";
+        balloon.style.backgroundColor = color;
     }
 </script>
 </body>
