--- a/piscines/php/day09/ex02/index.html
+++ b/piscines/php/day09/ex02/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Todo list</title>
+    <title>To do or not to do</title>
     <script src="todo.js"></script>
 </head>
 <body>
