2 files changed, 7 insertions(+), 9 deletions(-)

--- a/piscines/php/day09/ex01/calc.html
+++ b/piscines/php/day09/ex01/calc.html
@@ -15,7 +15,7 @@
         <option>%</option>
     </select>
     <input type="text" id="nbr2" required>
-    <input type="submit" value="Try me!">
+    <input id="calc" type="submit" value="Try me!">
 </form>
 
 <script>
