2 files changed, 8 insertions(+), 8 deletions(-)

--- a/piscines/php/day09/ex01/calc.html
+++ b/piscines/php/day09/ex01/calc.html
@@ -5,7 +5,7 @@
     </style>
 </head>
 <body>
-<form>
+<form id="calc" name="calc">
     <input type="text" id="nbr1" required>
     <select id="op">
         <option>+</option>
@@ -15,7 +15,7 @@
         <option>%</option>
     </select>
     <input type="text" id="nbr2" required>
-    <input id="calc" type="submit" value="Try me!">
+    <input type="submit" value="Try me!">
 </form>
 
 <script>
