2 files changed, 9 insertions(+), 6 deletions(-)

--- a/piscines/php/day09/ex01/calc.html
+++ b/piscines/php/day09/ex01/calc.html
@@ -32,6 +32,9 @@
             var op = form['op'].value;
             var result = "";
 
+            console.log(nbr1);
+            console.log(nbr2);
+
             if (nbr1 < 0 || nbr2 < 0) {
                 alert("Error :(");
                 return false;
