2 files changed, 5 insertions(+), 5 deletions(-)

--- a/piscines/php/day09/ex01/calc.html
+++ b/piscines/php/day09/ex01/calc.html
@@ -32,7 +32,7 @@
             var op = form['op'].value;
             var result = "";
 
-            if (nbr1 < 0 || nbr2 < 0 || !nbr1 || !nbr2) {
+            if (nbr1 < 0 || nbr2 < 0 || nbr1 == NaN || nbr2 == NaN) {
                 alert("Error :(");
                 return false;
             }
