--- a/piscines/php/day09/ex01/calc.html
+++ b/piscines/php/day09/ex01/calc.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form id="calc" name="calc">
-    <input type="text" id="nbr1" required>
+    <input type="number" id="nbr1" required>
     <select id="op">
         <option>+</option>
         <option>-</option>
@@ -14,7 +14,7 @@
         <option>/</option>
         <option>%</option>
     </select>
-    <input type="text" id="nbr2" required>
+    <input type="number" id="nbr2" required>
     <input type="submit" value="Try me!">
 </form>
 
@@ -32,7 +32,7 @@
             var op = form['op'].value;
             var result = "";
 
-            if (nbr1 < 0 || nbr2 < 0 || nbr1 == NaN || nbr2 == NaN) {
+            if (nbr1 < 0 || nbr2 < 0 || ) {
                 alert("Error :(");
                 return false;
             }
