2 files changed, 7 insertions(+), 7 deletions(-)

--- a/piscines/php/day09/ex01/calc.html
+++ b/piscines/php/day09/ex01/calc.html
@@ -32,7 +32,7 @@
             var op = form['op'].value;
             var result = "";
 
-            if (nbr1 < 0 || nbr2 < 0 || ) {
+            if (nbr1 < 0 || nbr2 < 0) {
                 alert("Error :(");
                 return false;
             }
