2 files changed, 7 insertions(+), 7 deletions(-)

--- a/piscines/php/day09/ex01/calc.html
+++ b/piscines/php/day09/ex01/calc.html
@@ -53,7 +53,7 @@
     }
 
     function isNumeric(n) {
-        return !isNaN(parseFloat(n)) && isFinite(n);
+        return !isNaN(parseInt(n)) && isFinite(n);
     }
 </script>
 </body>
